<resources>
    <string name="app_name">同济新生导航</string>
    <string name="yi_ka_tong_question">一卡通是什么？</string>
    <string name="navigation_title">入学导航</string>
    <string name="eating_title">吃在同济</string>
    <string name="learn_title">学在同济</string>
    <string name="living_title">住在同济</string>
    <string name="official_webSite_title">同济官网</string>
    <string name="answer_title">常见问题</string>
    <string name="yi_ka_tong_answer_text">  一卡通就是同济大学校园卡，主要作用是支付和通行证。
支付方面：食堂吃饭（没有一卡通+20%搭伙费）、澡堂洗澡、教育超市、校内店铺（一二九边上的酸奶、三好坞对面的咖啡厅）
充值方法：入学报道会第一次交现金充值，之后可以通过圈存机（食堂和大活）通过银行卡-校园卡转账方式充入，还是挺方便的。银行卡为农行，录取通知书中有寄过去，南门口就有一个农行点和自动取款机。14年新加支付宝充值服务，充值之后需要在食堂消费才能激活充值的金额。
通行证方面：进入寝室（只能进自己寝室楼），进入图书馆（图书馆刷座位，图书馆借书），考试时的身份证明（因为有姓名、学号、照片），晨跑刷卡
一卡通一次性消费初始设定为30，超过将需要输入密码。这一设置是为了减少一卡通丢失被使用的损失，可在圈存机上修改设定。初始6位密码为身份证号倒数第七位到第二位，和学号密码相同，建议修改。寝室楼里的热水，0.1元一壶。校医院一折。</string>
    <string name="kong_tiao_question">寝室有空调么？</string>
    <string name="kong_tiao_answer_text">    经重装修之后，基本每一栋宿舍（除西南一个别寝室结构问题）都装有空调，空调以租赁形式使用，一个寝室一次付清四年费用共1650元。租赁空调的地点为西南二楼下（即人工草坪南面）的“格力空调同济服务中心”。新生开学时会有很多人，建议一个寝室派代表，收集好寝室的学号手机号等资料，错开高峰期去租赁</string>
    <string name="kuan_dai_question">宽带问题</string>
    <string name="kuan_dai_answer_text">    宽带只能选电信的，有多种套餐选择，需要绑定电信手机号。
25元/月，有线无线一月有限定的小时数，2M网络
45元/月，有线上网时间不限，4M网络，无线时间有限制但亲测用不完。
59元/月，有线不限，10M网络，无线时间无限。
这里说的有线是指宽带连接或者路由器，无线指的是学校覆盖的wifi。
一般选的45或59比较多。在开学的时候记住要早点去开网不然人会很多，开网的地方在综合楼对面的电信服务中心，综合楼外面也会有电信临时摊点。据说14年电信会开通网上注册的服务，具体请关注贴吧最新消息。
说点个人意见吧，45的2M和59的10M玩游戏看视频都不会卡，至于差别在哪可能是下载的时候限制吧（工作人员会推荐10M告诉你2M的很卡不能玩游戏不能看视频，而且工作人员会说必须每人一个账号不能共用，楼主亲测一寝室一个账号用路由4电脑4手机是没问题的，可能会被电信警告的情况是多人使用一个账号连接wifi）
</string>
</resources>
