<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/aliceblue"
              android:orientation="vertical"
              tools:context="cn.studyjams.s1.sj61.luolaiyuan.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/welcome_to_school"
            android:scaleType="fitXY"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/navigation_button"
                style="@style/MainIndexButtonStyle"
                android:text="@string/navigation_title"
                />

            <Button
                android:id="@+id/eating_in_school_button"
                style="@style/MainIndexButtonStyle"
                android:text="@string/eating_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/leaving_in_school_button"
                style="@style/MainIndexButtonStyle"
                android:text="@string/living_title"/>

            <Button
                android:id="@+id/study_in_school_button"
                style="@style/MainIndexButtonStyle"
                android:text="@string/learn_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/official_website_button"
                style="@style/MainIndexButtonStyle"
                android:text="@string/official_webSite_title"/>

            <Button
                android:id="@+id/question_button"
                style="@style/MainIndexButtonStyle"
                android:text="@string/answer_title"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
